--- a/index.html
+++ b/index.html
@@ -385,19 +385,33 @@
             <h2 class="heading-h2 text-center divider"><span class="gsap-reveal">Get In Touch</span></h2>
             <span class="gsap-reveal"><img src="images/divider.png" alt="divider" width="76"></span>
           </div>
-          <div class="row justify-content-center">
-            <div class="col-md-8 text-center">
-              <p class="gsap-reveal lead" style="color: #FFA07A;">
-                Feel free to reach out to me directly via <b style="color: rgb(243, 47, 25);">email</b> which is given below,
-                or use the <b style="color: rgb(233, 63, 44);">form</b> below to send me a message. I look forward to hearing from you whenever you have questions!
+          <section class="contact-info">
+            <p class="gsap-reveal lead" style="color: #FFA07A;">
+              Hello there! 👋 Feel free to connect with me directly. You can reach out via <strong style="color: rgb(243, 47, 25);">email</strong>, or use the convenient <strong style="color: rgb(233, 63, 44);">message form</strong> below. I'm here to help and look forward to answering any questions you may have!
+            </p>
+          </section>
+          
+          <section class="contact-methods">
+            <div class="contact-option">
+              <img src="images/gmail.png" alt="Email icon" class="icon" style="height: 20px; width: 20px">
+              <p class="method-description">
+                For a quick response, drop me an <span style="color: rgb(243, 47, 25);">email</span> at:
+                <a href="mailto:your.email@example.com" style="color: rgb(243, 47, 25);">your.email@example.com</a>
               </p>
             </div>
-          </div>
+            
+            <div class="contact-option">
+              <img src="images/contact-form.png" alt="Message form icon" class="icon" style="height: 20px; width: 20px">
+              <p class="method-description">
+                Prefer a written message? Use the <span style="color: rgb(233, 63, 44);">form</span> below to send me your thoughts, questions, or comments.
+              </p>
+            </div>
+          </section>
 
 
           <div class="row justify-content-between">
             <div class="col-md-6">
-                <form method="post" action="php/send-email.php" class="form-outline-style-v1" id="contactForm">
+                <form method="post" action="php/send-email.php" class="form-outline-style-v1" id="contactForm" enctype="multipart/form-data">
                     <div class="form-group row mb-0">
                         <div class="col-lg-6 form-group gsap-reveal">
                             <label for="name">Name</label>
@@ -415,6 +429,10 @@
                             <label for="message">Write your message...</label>
                             <textarea name="message" id="message" cols="30" rows="7" class="form-control" required></textarea>
                         </div>
+                        <div class="col-lg-12 form-group gsap-reveal">
+                          <label for="attachments"></label>
+                          <input type="file" name="attachments[]" id="attachments" multiple />
+                      </div>
                     </div>
                     <div class="form-group row gsap-reveal">
                         <div class="col-md-12 d-flex align-items-center">
