--- a/index.html
+++ b/index.html
@@ -260,14 +260,14 @@
                   <td>Monday</td>
                   <td>3:00 PM - 6:00 PM</td>
                   <td class="join-session-box">
-                    <a href="your_zoom_link_for_monday" class="btn btn-primary">Join Zoom</a>
+                    <a href="https://us04web.zoom.us/j/72381264731?pwd=XM5zp4bY7xgAxYrIuryQcVyFpDvATq.1" target="_blank" class="btn btn-primary">Join Zoom</a>
                   </td>
                 </tr>
                 <tr>
                   <td>Tuesday</td>
                   <td>4:00 PM - 8:00 PM</td>
                   <td class="join-session-box">
-                    <a href="your_zoom_link_for_tuesday" class="btn btn-primary">Join Zoom</a>
+                    <a href="https://us04web.zoom.us/j/72381264731?pwd=XM5zp4bY7xgAxYrIuryQcVyFpDvATq.1" target="_blank" class="btn btn-primary">Join Zoom</a>
                   </td>
                 </tr>
                 <tr>
@@ -281,29 +281,29 @@
                   <td>Thursday</td>
                   <td>4:00 PM - 8:00 PM</td>
                   <td class="join-session-box">
-                    <a href="your_zoom_link_for_thursday" class="btn btn-primary">Join Zoom</a>
+                    <a href="https://us04web.zoom.us/j/72381264731?pwd=XM5zp4bY7xgAxYrIuryQcVyFpDvATq.1" target="_blank" class="btn btn-primary">Join Zoom</a>
                   </td>
                 </tr>
                 <tr>
                   <td>Friday</td>
                   <td>8:00 AM - 12:00 PM</td>
                   <td class="join-session-box">
-                    <a href="your_zoom_link_for_friday" class="btn btn-primary">Join Zoom</a>
+                    <a href="https://us04web.zoom.us/j/72381264731?pwd=XM5zp4bY7xgAxYrIuryQcVyFpDvATq.1" target="_blank" class="btn btn-primary">Join Zoom</a>
                   </td>
                 </tr>
                 <!-- Additional rows for Saturday and Sunday -->
                 <tr>
                   <td>Saturday</td>
-                  <td>5:30 PM - 7:00 PM</td>
+                  <td>5:30 PM - 7:00 PM - On Request Only</td>
                   <td class="join-session-box">
-                    <a href="#" class="btn btn-primary" onclick="return false;" style="background-color: #FFA07A;">On Request Only</a>
+                    <a href="https://us04web.zoom.us/j/72381264731?pwd=XM5zp4bY7xgAxYrIuryQcVyFpDvATq.1" target="_blank" class="btn btn-primary" onclick="return false;" style="background-color: #FFA07A;">On Request Only</a>
                   </td>
                 </tr>
                 <tr>
                   <td>Sunday</td>
                   <td>5:30 PM - 7:00 PM</td>
                   <td class="join-session-box">
-                    <a href="#" class="btn btn-primary" onclick="return false;"style="background-color: #FFA07A;">On Request Only</a>
+                    <a href="https://us04web.zoom.us/j/72381264731?pwd=XM5zp4bY7xgAxYrIuryQcVyFpDvATq.1" target ="_blank" class="btn btn-primary" onclick="return false;"style="background-color: #FFA07A;">On Request Only</a>
                   </td>
                 </tr>
               </tbody>
