Added all the required information

--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
                   <h3 class="mb-4 heading-h3"><span class="gsap-reveal">Meet Your Web Development Tutor</span></h3>
                   <p class="lead gsap-reveal">Hello, aspiring web developers! I'm your guide through the realms of HTML, CSS, JavaScript, PHP, and Python and its frameworks.</p>
                   <p class="mb-4 gsap-reveal">With a passion for turning ideas into interactive and functional websites, I specialize in teaching the intricacies of web development. From crafting stylish layouts with CSS to implementing dynamic functionality with JavaScript and server-side magic with PHP and Python, we'll explore the world of web technologies together.</p>
-                  <p class="gsap-reveal"><a href="#" class="btn btn-outline-pill btn-custom-light">My Portfolio Website</a></p>
+                  <!-- <p class="gsap-reveal"><a href="#" class="btn btn-outline-pill btn-custom-light">My Portfolio Website</a></p>
                   <p class="gsap-reveal"><a href="#" class="btn btn-outline-pill btn-custom-light">GitHub</a></p>
-                  <p class="gsap-reveal"><a href="#" class="btn btn-outline-pill btn-custom-light">LinkedIn</a></p>
+                  <p class="gsap-reveal"><a href="#" class="btn btn-outline-pill btn-custom-light">LinkedIn</a></p> -->
                 </div>
               </div>
             </div>
@@ -396,7 +396,7 @@
               <img src="images/gmail.png" alt="Email icon" class="icon" style="height: 20px; width: 20px">
               <p class="method-description">
                 For a quick response, drop me an <span style="color: rgb(243, 47, 25);">email</span> at:
-                <a href="mailto:your.email@example.com" style="color: rgb(243, 47, 25);">your.email@example.com</a>
+                <a href="mailto:your.email@example.com" style="color: rgb(243, 47, 25);">mkhan49@student.mtsac.edu</a>
               </p>
             </div>
             
@@ -404,6 +404,7 @@
               <img src="images/contact-form.png" alt="Message form icon" class="icon" style="height: 20px; width: 20px">
               <p class="method-description">
                 Prefer a written message? Use the <span style="color: rgb(233, 63, 44);">form</span> below to send me your thoughts, questions, or comments.
+                If the form gives you any trouble, don't hesitate to drop me an <span style="color: rgb(243, 47, 25);">email</span> as well!
               </p>
             </div>
           </section>
@@ -450,12 +451,12 @@
               <div class="contact-info-v1">
                 <div class="gsap-reveal d-block">
                   <span class="d-block contact-info-label">Email</span>
-                  <a href="#" class="contact-info-val">info@yourdomain.com</a>
+                  <a href="#" class="contact-info-val">mkhan49@student.mtsac.edu</a>
                 </div>
-                <div class="gsap-reveal d-block">
+                <!-- <div class="gsap-reveal d-block">
                   <span class="d-block contact-info-label">Phone</span>
                   <a href="#" class="contact-info-val">+12 345 6789 012</a>
-                </div>
+                </div> -->
               </div>
             </div>
 
