Added all the required information

--- a/index.html
+++ b/index.html
@@ -294,14 +294,14 @@
                 <!-- Additional rows for Saturday and Sunday -->
                 <tr>
                   <td>Saturday</td>
-                  <td>5:30 PM - 7:00 PM - On Request Only</td>
+                  <td> On Request Only</td>
                   <td class="join-session-box">
                     <a href="https://us04web.zoom.us/j/72381264731?pwd=XM5zp4bY7xgAxYrIuryQcVyFpDvATq.1" target="_blank" class="btn btn-primary" onclick="return false;" style="background-color: #FFA07A;">On Request Only</a>
                   </td>
                 </tr>
                 <tr>
                   <td>Sunday</td>
-                  <td>5:30 PM - 7:00 PM</td>
+                  <td> On Request Only </td>
                   <td class="join-session-box">
                     <a href="https://us04web.zoom.us/j/72381264731?pwd=XM5zp4bY7xgAxYrIuryQcVyFpDvATq.1" target ="_blank" class="btn btn-primary" onclick="return false;"style="background-color: #FFA07A;">On Request Only</a>
                   </td>
