Added SSL Certificate for secure connection.

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 
           <div class="row justify-content-between">
             <div class="col-md-6">
-                <form method="post" action="http://ec2-52-66-236-236.ap-south-1.compute.amazonaws.com:5000/send-email.php" class="form-outline-style-v1" id="contactForm" enctype="multipart/form-data">
+                <form method="post" action="https://ec2-52-66-236-236.ap-south-1.compute.amazonaws.com:5000/send-email.php" class="form-outline-style-v1" id="contactForm" enctype="multipart/form-data">
                     <div class="form-group row mb-0">
                         <div class="col-lg-6 form-group gsap-reveal">
                             <label for="name">Name</label>
