--- a/index.html
+++ b/index.html
@@ -258,16 +258,16 @@
               <tbody>
                 <tr>
                   <td>Monday</td>
-                  <td>3:00 PM - 6:00 PM</td>
+                  <td>6:00 PM - 10:00 PM</td>
                   <td class="join-session-box">
-                    <a href="https://us04web.zoom.us/j/72381264731?pwd=XM5zp4bY7xgAxYrIuryQcVyFpDvATq.1" target="_blank" class="btn btn-primary">Join Zoom</a>
+                    <a href="" target="_blank" class="btn btn-primary">Join Zoom</a>
                   </td>
                 </tr>
                 <tr>
                   <td>Tuesday</td>
-                  <td>4:00 PM - 8:00 PM</td>
+                  <td>8:00 PM - 10:00 PM</td>
                   <td class="join-session-box">
-                    <a href="https://us04web.zoom.us/j/72381264731?pwd=XM5zp4bY7xgAxYrIuryQcVyFpDvATq.1" target="_blank" class="btn btn-primary">Join Zoom</a>
+                    <a href="" target="_blank" class="btn btn-primary">Join Zoom</a>
                   </td>
                 </tr>
                 <tr>
@@ -279,16 +279,16 @@
                 </tr>
                 <tr>
                   <td>Thursday</td>
-                  <td>4:00 PM - 8:00 PM</td>
+                  <td>8:00 PM - 10:00 PM</td>
                   <td class="join-session-box">
-                    <a href="https://us04web.zoom.us/j/72381264731?pwd=XM5zp4bY7xgAxYrIuryQcVyFpDvATq.1" target="_blank" class="btn btn-primary">Join Zoom</a>
+                    <a href="" target="_blank" class="btn btn-primary">Join Zoom</a>
                   </td>
                 </tr>
                 <tr>
                   <td>Friday</td>
-                  <td>8:00 AM - 11:00 AM</td>
+                  <td>8:00 AM - 12:00 AM</td>
                   <td class="join-session-box">
-                    <a href="https://us04web.zoom.us/j/72381264731?pwd=XM5zp4bY7xgAxYrIuryQcVyFpDvATq.1" target="_blank" class="btn btn-primary">Join Zoom</a>
+                    <a href="" target="_blank" class="btn btn-primary">Join Zoom</a>
                   </td>
                 </tr>
                 <!-- Additional rows for Saturday and Sunday -->
