--- a/index.html
+++ b/index.html
@@ -260,35 +260,35 @@
                   <td>Monday</td>
                   <td>6:00 PM - 10:00 PM</td>
                   <td class="join-session-box">
-                    <a href="" target="_blank" class="btn btn-primary">Join Zoom</a>
+                    <a href="https://mtsac-edu.zoom.us/j/83739493519?pwd=eMRAU8bZYOzWt2VsbgQnO9aqmPeurA.1" target="_blank" class="btn btn-primary">Join Zoom</a>
                   </td>
                 </tr>
                 <tr>
                   <td>Tuesday</td>
                   <td>8:00 PM - 10:00 PM</td>
                   <td class="join-session-box">
-                    <a href="" target="_blank" class="btn btn-primary">Join Zoom</a>
+                    <a href="https://mtsac-edu.zoom.us/j/83739493519?pwd=eMRAU8bZYOzWt2VsbgQnO9aqmPeurA.1" target="_blank" class="btn btn-primary">Join Zoom</a>
                   </td>
                 </tr>
                 <tr>
                   <td>Wednesday</td>
                   <td>5:30 PM - 7:00 PM</td>
                   <td class="join-session-box">
-                    <a href="#" class="btn btn-primary" onclick="return false;"style="background-color: #FFA07A;">Only In-person Tutoring</a>
+                    <a href="#" class="btn btn-primary" onclick="return false;"style="background-color: #FFA07A;">Only In-person Tutoring Building Number-79 Room Number- 2200</a>
                   </td>
                 </tr>
                 <tr>
                   <td>Thursday</td>
                   <td>8:00 PM - 10:00 PM</td>
                   <td class="join-session-box">
-                    <a href="" target="_blank" class="btn btn-primary">Join Zoom</a>
+                    <a href="https://mtsac-edu.zoom.us/j/83739493519?pwd=eMRAU8bZYOzWt2VsbgQnO9aqmPeurA.1" target="_blank" class="btn btn-primary">Join Zoom</a>
                   </td>
                 </tr>
                 <tr>
                   <td>Friday</td>
-                  <td>8:00 AM - 12:00 AM</td>
+                  <td>8:00 AM - 12:00 PM</td>
                   <td class="join-session-box">
-                    <a href="" target="_blank" class="btn btn-primary">Join Zoom</a>
+                    <a href="https://mtsac-edu.zoom.us/j/83739493519?pwd=eMRAU8bZYOzWt2VsbgQnO9aqmPeurA.1" target="_blank" class="btn btn-primary">Join Zoom</a>
                   </td>
                 </tr>
                 <!-- Additional rows for Saturday and Sunday -->
@@ -296,14 +296,14 @@
                   <td>Saturday</td>
                   <td> On Request Only</td>
                   <td class="join-session-box">
-                    <a href="https://us04web.zoom.us/j/72381264731?pwd=XM5zp4bY7xgAxYrIuryQcVyFpDvATq.1" target="_blank" class="btn btn-primary" onclick="return false;" style="background-color: #FFA07A;">On Request Only</a>
+                    <a href="https://mtsac-edu.zoom.us/j/83739493519?pwd=eMRAU8bZYOzWt2VsbgQnO9aqmPeurA.1" target="_blank" class="btn btn-primary" onclick="return false;" style="background-color: #FFA07A;">On Request Only</a>
                   </td>
                 </tr>
                 <tr>
                   <td>Sunday</td>
                   <td> On Request Only </td>
                   <td class="join-session-box">
-                    <a href="https://us04web.zoom.us/j/72381264731?pwd=XM5zp4bY7xgAxYrIuryQcVyFpDvATq.1" target ="_blank" class="btn btn-primary" onclick="return false;"style="background-color: #FFA07A;">On Request Only</a>
+                    <a href="https://mtsac-edu.zoom.us/j/83739493519?pwd=eMRAU8bZYOzWt2VsbgQnO9aqmPeurA.1" target ="_blank" class="btn btn-primary" onclick="return false;"style="background-color: #FFA07A;">On Request Only</a>
                   </td>
                 </tr>
               </tbody>
