--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                   <td>Saturday</td>
                   <td>7:00 AM - 1:00 PM</td>
                   <td class="join-session-box">
-                    <a href="https://mtsac-edu.zoom.us/j/85954625079?pwd=uXQpICPiMjTFGnUGx0nD4A3MlAbH8O.1" target="_blank" class="btn btn-primary" onclick="return false;" style="background-color: #FFA07A;">Join Zoom</a>
+                    <a href="https://mtsac-edu.zoom.us/j/85954625079?pwd=uXQpICPiMjTFGnUGx0nD4A3MlAbH8O.1" target="_blank" class="btn btn-primary";" style="background-color: #FFA07A;">Join Zoom</a>
                   </td>
                 </tr>
                 <tr>
